<resources>
    <string name="app_name">수플</string>

    <!-- Toolbar-->
    <string name="suwon_university">수원대학교</string>
    <string name="setting">설정</string>
    <string name="memo">메모</string>
    <string name="time_table">시간표</string>
    <string name="time_table_list">시간표 목록</string>
    <string name="notice">공지사항</string>

    <!-- Start-->
    <string name="loading">Loading...</string>


    <!-- Login-->
    <string name="login">로그인</string>
    <string name="signIn">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="id_search">아이디 찾기</string>
    <string name="search_password">비밀번호 찾기</string>


    <!-- SignIn-->
    <string name="please_input_account_information">환영합니다😊\n계정 정보를 입력해주세요</string>
    <string name="need_web_mail">전송 버튼을 누르면 \n해당 이메일로 인증 메일이 전송됩니다</string>
    <string name="please_input_suwon_web_email">수원대학교 웹메일 이메일을 입력해주세요\nsample@suwon.ac.kr</string>
    <string name="please_check_your_email">이메일로 링크가 전송되었습니다 확인해주세요😊</string>
    <string name="send_email_check_please">인증 메일이 전송 되었습니다. 인증 후 다시 로그인 해 주세요</string>

    <string name="email_send_failed_click_button_please">인증 메일이 전송되지 않았어요\n다시 전송버튼을 눌러주세요😭</string>
    <string name="signIn_fail_check_your_email">회원가입에 실패 했습니다.\n이메일과 비밀번호를 확인해주세요😭</string>

    <string name="web_mail_hint">sample@suwon.ac.kr</string>
    <string name="send">전송</string>
    <string name="next">다음</string>
    <string name="back">이전</string>
    <string name="password_is_not_same">비밀번호가 일치하지 않습니다.</string>
    <string name="move_web_mail_link">수원대학교 웹메일로 이동하기(클릭하세요)</string>


    <!-- 로그인-->
    <string name="login_fail">로그인에 실패 했습니다. 이메일과 비밀번호를 확인해주세요😭</string>
    <string name="login_success">로그인에 성공했습니다😊</string>
    <string name="email_is_not_verified">인증되지 않은 이메일 입니다😱</string>
    <string name="email_is_verified">인증된 이메일 입니다</string>
    <string name="password_reset_mail_send">비밀번호 재설정 이메일이 전송되었습니다.</string>
    <string name="password_reset_mail_fail">메일 전송에 실패했습니다. 아이디를 확인해주세요</string>

    <!-- 시간표-->
    <string name="is_not_exist_timetable_please_create_timetable">새로운 시간표를 만들어주세요⏰</string>
    <string name="create_new_timetable">새로운 시간표\n만들기</string>
    <string name="timetable_name">시간표 이름</string>
    <string name="please_check_selected_lecture">선택한 강의를 추가하시겠어요?</string>
    <string name="lecture_detail">%s, %s학점, %s, %s ,%s</string>
    <string name="lecture_info">수업명 : %s\n시간 및 장소 : %s\n교수명 : %s</string>
    <string name="timetable_season">%d년도 %d학기</string>
    <string name="timetable_cell_title">%s\n%s</string>
    <string name="lecture_category_is_null">강의 리스트를 가져오는대 실패했습니다😭</string>
    <string name="lecture_name">수업명</string>
    <string name="professor_name">교수명</string>
    <string name="add_location_and_time">시간 및 장소를 추가</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thurday">목</string>
    <string name="fryday">금</string>
    <string name="defaultday">알 수 없는 요일입니다</string>
    <string name="time_error">잘못된 입력입니다. 시간을 확인해주세요😭</string>
    <string name="time_is_empty">시간이 제데로 입력되지 않았어요!</string>
    <string name="day_is_empty">요일을 선택하지 않았어요!</string>
    <string name="day_and_time">%c %s</string>
    <string name="time_format">%s:%s</string>

    <string name="positive">확인</string>
    <string name="save">저장</string>
    <string name="negative">취소</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="location">장소</string>
    <string name="lecture">강의</string>


    <string name="lecture_number">강의 수 :  </string>
    <string name="total_time">총 시간 :  </string>
    <string name="add_memo_is_empty">등록된 메모가 없습니다.</string>


    <!-- home-->
    <string name="public_notice">통합공지</string>
    <string name="college_schedule">학사일정</string>
    <string name="college_number">교내번호</string>
    <string name="center_library">중앙 도서관</string>
    <string name="campus_map">캠퍼스 맵</string>
    <string name="notice_category_is_null">공지를 가져오는대 실패했습니다😭</string>


    <!--setting-->
    <string name="need_login">로그인이 필요합니다</string>
    <string name="time_table_backup">시간표 백업</string>
    <string name="time_table_restore">시간표 복원</string>
    <string name="theme">테마</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="change_password_success">비밀번호 변경이 성공했습니다.</string>
    <string name="current_password_fail">이전 비밀번호가 일치하지 않습니다.</string>
    <string name="change_password_fail">비밀번호 변경에 실패했습니다😭</string>
    <string name="logout">로그아웃</string>
    <string name="signOut">회원탈퇴</string>
    <string name="signOut_success">회원 탈퇴되었습니다.</string>
    <string name="signOut_fail">회원탈퇴에 실패했습니다😭</string>

    <string name="system_setting_mode">시스템 설정 모드</string>
    <string name="light_mode">라이트 모드</string>
    <string name="dark_mode">다크 모드</string>
    <string name="cancel">취소</string>
    <string name="start_time">시작시간</string>
    <string name="start_time_hint">09:00</string>
    <string name="end_time">종료시간</string>
    <string name="end_time_hint">12:00</string>

    <!--folder-->
    <string name="folder">폴더</string>
    <string name="bookmark">북마크</string>



    <string name="search">검색</string>
    <string name="please_create_folder">폴더를 생성해주세요🗂</string>
    <string name="notice_list_is_empty">저장된 공지사항이 없습니다!</string>
    <string name="edit">수정</string>


    <string name="folder_memo">memo</string>
    <string name="folder_notice">notice</string>
    <string name="folder_time_table">timetable</string>
    <string name="editTime">"%s %s  수정됨"</string>

    <string name="add">추가</string>
    <string name="save_image">사진을 저장중입니다. ( %d / %d )</string>
    <string name="save_image_with_count">사진을 저장중입니다. ( %d / %d )</string>
    <string name="save_image_is_not_finish">사진 저장이 완료되지 않았습니다</string>

    <!--gallery-->
    <string name="please_check_storage_permission">[애플리케이션 정보 > 권한]에서 [저장소] 권한을 허용하고 다시 해보세요</string>
    <string name="detail_setting">상세설정</string>
    <string name="complete">완료</string>
    <string name="album">앨범</string>

</resources>