<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/systemModeTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/system_setting_mode"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/lightModeTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/light_mode"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/darkModeTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/dark_mode"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/cancelTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"/>


</LinearLayout>