<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        style="@style/Widget.Suwon_University_Community.Toolbar.WithArrow"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolBarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/userInfoContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar">


        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:drawablePadding="12dp"
            android:layout_marginTop="12dp"
            android:gravity="start|center"
            app:drawableStartCompat="@drawable/ic_outline_person_24"
            android:text="@string/need_login" />



        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />







        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:drawablePadding="12dp"
            android:gravity="start|center"
            android:text="@string/time_table_backup"
            app:drawableStartCompat="@drawable/ic_baseline_event_note_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:drawablePadding="12dp"
            android:gravity="start|center"
            app:drawableStartCompat="@drawable/ic_baseline_event_note_24"
            android:text="@string/time_table_restore" />


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/themeTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:drawablePadding="12dp"
                android:gravity="start|center"
                app:drawableStartCompat="@drawable/ic_outline_format_paint_24"
                android:text="@string/theme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/themeModeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_setting_mode"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp" />



        <TextView
            android:id="@+id/logoutTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"

            android:layout_marginTop="12dp"
            android:gravity="start|center"
            android:text="@string/logout"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/changePasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            android:gravity="start|center"
            android:text="@string/change_password"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/signOutTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            android:gravity="start|center"
            android:text="@string/signOut"
            android:visibility="gone"
            tools:visibility="visible"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>